<resources>

    <string name="app_name">Oscar\'s App Portfolio</string>

    <string name="app_list_title">My Nanodegree Apps!</string>

    <string name="app_title_popular_movies">Popular Movies</string>
    <string name="app_title_stock_hawk">Stock Hawk</string>
    <string name="app_title_build_it_bigger">Build it Bigger</string>
    <string name="app_title_make_your_app_material">Make Your App Material</string>
    <string name="app_title_go_ubiquitous">Go Ubiquitous</string>
    <string name="app_title_capstone">Capstone</string>

    <string name="description_toast">This button will launch my %s app!</string>

</resources>
